# analista-financeiro-ia

./: .env.example  .gitignore  LICENSE  README.md  composer.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.docker/: .dockerignore
.docker/nginx/: default.conf
.docker/php/: Dockerfile
.docker/python/: Dockerfile  requirements.txt
app/Http/Controllers/: AnalysisController.php  ReportController.php
app/Models/: Report.php
backend/: config.py  crew_service.py  main.py  models.py  rate_limiter.py  requirements.txt  run_analysis  schemas.py  teste_chave.py
database/migrations/: 2025_11_04_223922_create_reports_table.php  2025_11_07_234951_alter_reports_table_add_longtext_column.php
resources/js/Layouts/: AuthenticatedLayout.vue
resources/js/Pages/: Welcome.vue
resources/js/Pages/Analysis/: Index.vue
resources/js/Pages/Public/: ReportShow.vue  ReportsIndex.vue
routes/: web.php
src/equipe_de_analise_financeira_ia/: crew.py  main.py
src/equipe_de_analise_financeira_ia/config/: agents.yaml  tasks.yaml
storage/docker/mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
storage/docker/mysql/#innodb_redo/: #ib_redo9
storage/docker/mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
storage/docker/mysql/laravel/: failed_jobs.ibd  migrations.ibd  password_reset_tokens.ibd  (+2 more)
(+115 files in other folders)
